demopod.yaml
apiVersion: v1 
kind: Pod
metadata:
  name: demopod
  namespace: demons
  labels:
    env: dev
spec:
  nodeName: gke-mygke-default-pool-6af10c4f-3m2r
  containers:
  - name: c1
    image: nginx
    resources:
      requests:
        cpu: 1m
        memory: 10M
      limits:
        cpu: 2m
        memory: 50M
  - name: c2
    image: tomcat:8.0
  - name: c3
    image: centos:6
    command: [/bin/sh,-c,'sleep 300']
