gcepd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gcepd
  namespace: demons
spec:
  containers:
  - name: mongo
    image: mongo
    volumeMounts:
    - name: gcepd
      mountPath: /data/db
    ports:
    - containerPort: 27017
  volumes:
  - name: gcepd
    gcePersistentDisk: 
      pdName: datadisk
      fsType: ext4
