pvcpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvcpod
  # namespace: demons
spec:
  containers:
  - name: mongo
    image: mongo
    volumeMounts:
    - name: mypvc
      mountPath: /data/db
    ports:
    - containerPort: 27017
  volumes:
  - name: mypvc
    persistentVolumeClaim:
      claimName: demopvc
