hostpath.yaml
apiVersion: v1 
kind: Pod
metadata:
  name: hostpod
  namespace: demons
  labels:
    env: host
spec:
  nodeName: gke-mygke-default-pool-6af10c4f-bbc3
  containers:
  - name: c1
    image: nginx
    volumeMounts:
    - name: hostvol
      mountPath: /usr/share/nginx/html
  - name: c2
    image: centos:6
    command: [/bin/sh,-c,'while true;do X=$[$X+1];echo "<center><h1>$X</h1></center>" >> /datavol/index.html; sleep 1;done']
    volumeMounts:
    - name: hostvol
      mountPath: /datavol
  volumes:
  - name: hostvol
    hostPath:
      path: /tmp/hostvol
---
apiVersion: v1
kind: Service
metadata:
  name: hostserv
  namespace: demons
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    env: host
